decktracker: fix tooltips not showing properly after resize

--- a/Files/src/css/component/decktracker/overlay/decktracker-overlay.component.scss
+++ b/Files/src/css/component/decktracker/overlay/decktracker-overlay.component.scss
@@ -92,7 +92,6 @@
 	}
 
 	tooltips {
-		z-index: 2;
 		pointer-events: none;
 
 		::ng-deep tooltip {
@@ -101,6 +100,7 @@
 			// display: flex !important;
 			align-items: center;
 			justify-content: center;
+			z-index: 1;
 
 			.tooltip-container img {
 				width: 210px;
